--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,8 @@
     "@hookform/resolvers": "^5.2.2",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-slot": "^1.2.3",
+    "@react-three/drei": "^10.7.6",
+    "@react-three/fiber": "^9.3.0",
     "@reduxjs/toolkit": "^2.9.0",
     "axios": "^1.12.2",
     "class-variance-authority": "^0.7.1",
@@ -26,6 +28,7 @@
     "react-intersection-observer": "^9.16.0",
     "react-redux": "^9.2.0",
     "tailwind-merge": "^3.3.1",
+    "three": "^0.180.0",
     "zod": "^4.1.11"
   },
   "devDependencies": {
